# fl-ids

./: .envrc  .gitattributes  .gitignore  README.md  eiffel_history.txt  flake.nix  pyproject.toml  ruff.toml  shell.nix  toolbox.py
data/cic/CSE-CIC-IDS2018/: Friday-02-03-2018_TrafficForML_CICFlowMeter.csv  Friday-23-02-2018_TrafficForML_CICFlowMeter.csv  Thursday-01-03-2018_TrafficForML_CICFlowMeter.csv  Wednesday-28-02-2018_TrafficForML_CICFlowMeter.csv
data/nfv2/origin/: get_dataset.sh
exps/: dataset_similarity.ipynb
exps/assessment/: acmcompat.mplstyle  analysis.ipynb  beamer.mplstyle  cdb.mplstyle  common.ipynb  dataset.ipynb  rq-backdoor.ipynb  rq-dataset.ipynb  rq-hyperparams.ipynb  rq-predictability.ipynb  rq-redemption.ipynb  rq-similarity.ipynb  rq-threshold.ipynb
exps/assessment-nb15/: rq-backdoor.ipynb  rq-dataset.ipynb  rq-hyperparams.ipynb
exps/assessment-nb15/attacks-targeted/conf/: config.yaml
exps/assessment-nb15/attacks-untargeted/conf/: config.yaml
exps/assessment-nb15/late/results/: multirun.yaml
exps/assessment-nb15/longruns/conf/: config.yaml
exps/assessment-nb15/longruns/results/: multirun.yaml
exps/assessment-nb15/redemption/conf/: config.yaml
exps/assessment/attacks-1x100/conf/: config.yaml
exps/assessment/attacks-4x25/conf/: config.yaml
exps/assessment/attacks-ext/conf/: config.yaml
exps/assessment/attacks-ext/results/: multirun.yaml
exps/assessment/attacks-targeted-5-5-1/conf/: config.yaml
exps/assessment/attacks-targeted/conf/: config.yaml
exps/assessment/cicids/: rq-backdoor.ipynb  rq-dataset.ipynb  rq-hyperparams.ipynb  rq-predictability.ipynb  rq-redemption.ipynb  rq-similarity.ipynb  rq-threshold.ipynb
exps/assessment/conf/: config.yaml
exps/assessment/nb15/: rq-backdoor.ipynb  rq-dataset.ipynb  rq-hyperparams.ipynb  rq-predictability.ipynb  rq-redemption.ipynb  rq-similarity.ipynb  rq-threshold.ipynb
exps/assessment_nb15/: rq-backdoor.ipynb  rq-hyperparams.ipynb  rq-predictability.ipynb  rq-redemption.ipynb  rq-similarity.ipynb  rq-threshold.ipynb
exps/convexsim/: README.md  analysis.ipynb  gen_data.py
exps/convexsim/similarity/: module.py
exps/demo/: README.md  cdb.mplstyle  config.yaml  plots.ipynb
exps/demo/experiments/: heterogeneous.yaml  iid.yaml  poisoning.yaml
exps/demo/results/: multirun.yaml
exps/demo/src/: config.yaml
exps/pca/: README.md  pyproject.toml
exps/pca/pcafl/: overrides.yaml
exps/pca/pcafl/dataset/: nb15.yaml
exps/pca/src/: __init__.py  config.yaml  pcafl.py
exps/pca/src/strategy/: somestrategy.yaml
libs/eiffel/: README.md  pyproject.toml  result
libs/eiffel/eiffel/: __init__.py  __main__.py
libs/eiffel/macos/: pyproject.toml
(+27110 files in other folders)
