[project]
name = "fl-ids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flwr>=1.14.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "keras>=3.7.0",
    "matplotlib>=3.10.0",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "requests>=2.32.3",
    "schema>=0.7.7",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.18.0",
]
