[tool.poetry]
name = "demo"
version = "0.1.0"
description = "Demonstrator for FL+IDS"
authors = ["l20lavau <leo.lavaur@imt-atlantique.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
eiffel-framework = {path = "../../libs/eiffel", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
